# auth-service

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.local.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml  code-checker.yaml
backend/: Dockerfile
docker/backend/: Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile  nginx.conf
docker/nginx/configs/: site.conf
docs/: questions.md
docs/api/: swagger.yaml
docs/backend/: Backend_structure.md
docs/database/: Database.md  auth.sql
src/: .env.template  alembic.ini  gunicorn.conf.py  pytest.ini
src/app/: main.py
src/app/cache/: base.py  redis.py
src/app/common/: constants.py  enums.py
src/app/core/: config.py  oauth_config.py
src/app/dependencies/: __init__.py  auth.py  common.py  main.py  registrator.py
src/app/middleware/: error.py  main.py  request_id.py  trace.py
src/app/models/: __init__.py  base.py  device.py  history.py  mixins.py  role.py  social_account.py  user.py
src/app/providers/: cache_providers.py  http_providers.py  main.py  pg_providers.py
src/app/repositories/: __init__.py  base.py  device.py  history.py  role.py  social_account.py  user.py
src/app/schemas/: auth.py  oauth.py
src/app/services/: __init__.py  auth.py  device.py  history.py  oauth.py  rate_limit.py  role.py  social_account.py  user.py
src/app/telemetry/: console.py  jaeger.py  main.py
src/app/utils/: common.py  rate_limit.py
src/migrations/: env.py
src/migrations/versions/: 2023-06-10_14-49_init_schema_auth.py  2023-06-10_15-39_init_tables.py  2023-07-15_19-25_add_social_accounts_table.py
src/tests/: conftest.py  requirements.txt  wait_for_redis.py
(+68 files in other folders)
