[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["Орлов Ярослав <orlov.avis@yandex.ru>"]
readme = "README.md"
packages = [{include = "auth_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.95.1"
uvicorn = "^0.22.0"
passlib = "^1.7.4"
orjson = "^3.9.1"
sqlalchemy = "^2.0.17"
pyjwt = {extras = ["crypto"], version = "^2.7.0"}
alembic = "^1.11.1"
gunicorn = "^20.1.0"
pydantic = {extras = ["email"], version = "^1.10.9"}
redis = "^4.6.0"
httpx = "^0.24.1"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"
opentelemetry-api = "1.17.0"
opentelemetry-sdk = "1.17.0"
opentelemetry-instrumentation-fastapi = "0.38b0"
opentelemetry-exporter-jaeger = "1.17.0"
opentelemetry-instrumentation-sqlalchemy = "0.38b0"
opentelemetry-instrumentation-redis = "0.38b0"
cryptography = "^41.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
bandit = "1.7.5"
mypy = "1.4.0"
flake8-bandit = "4.1.1"
flake8-print = "5.0.0"
flake8-broken-line = "1.0.0"
flake8-bugbear = "23.6.5"
flake8-commas = "2.1.0"
pre-commit = "3.3.3"
flake8-pytest = "1.4"
flake8-pytest-style = "1.7.2"
types-redis = "^4.6.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
